# intro_qc4images

./: .gitignore  Image_Basics.ipynb  Python_Basics.ipynb  QolorQoding.ipynb  README.md  diagram.drawio  ibmq_access.py  pyproject.toml  tdot.ipynb  tdot_utils.py  utils.py
code/: ibmq_access.py  setup_AB1.py  setup_AB2.py  setup_AB3.py  tdot_utils.py  utils.py
code/template/: output.py  questions.py  settings.py  table_widget.py  text_multiple_choice_widget.py  text_order_widget.py  text_selection_widget.py  text_single_choice_widget.py  timed_audio_recorder_widget.py  widget_state_storage.py
help/: tipps_AB2_3a.ipynb  tipps_AB3_3e.ipynb  zusatz_AB1_3b.ipynb  zusatz_AB1_5a.ipynb  zusatz_AB2_3a.ipynb  zusatz_AB3_3e.ipynb
worksheets/: Image_Basics.ipynb  Python_Basics.ipynb  QolorQoding.ipynb  tdot.ipynb
